# ChocolafStyle

./: .clang-format  .clangd  .gitignore  ChocolafStyle.code-workspace  LICENSE  README.md  compile_commands.json  main.py  pyproject.toml
examples/C++/MyProjects/AppDevWithQtCreator/Starter02/: CMakeLists.txt  Counter.cpp  Counter.h  calcDialog.cpp  calcDialog.h  calcDialog.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
examples/C++/MyProjects/BeginningQt6/list_widget/: CMakeLists.txt  list_widget.cpp  list_widget.h  list_widget.pro  main.cpp  qactionpushbtn.cpp  qactionpushbtn.h
examples/C++/MyProjects/BeginningQt6/sysmets/: CMakeLists.txt  Sysmets.h  SysmetsModel.cpp  SysmetsModel.h  main.cpp  sysmets.pro
examples/C++/MyProjects/Doodle/step01/: CMakeLists.txt  step01.cc  step01.pro  step01.pro.user.ae887b7
examples/C++/MyProjects/Doodle/step02/: CMakeLists.txt  DrawWindow.cc  DrawWindow.h  step02.cc  step02.pro.user.ae887b7
examples/C++/MyProjects/Doodle/step03/: CMakeLists.txt  DrawWindow.cc  DrawWindow.h  scrollArea.py  step03.cc  step03.pro.user.ae887b7
examples/C++/MyProjects/Doodle/step04/: CMakeLists.txt  DrawWindow.cc  DrawWindow.h  step04.cc
examples/C++/MyProjects/Doodle/step06/: CMakeLists.txt  Doodle.cc  Doodle.h  DrawWindow.cc  DrawWindow.h  Line.cc  Line.h  object_script.step06.Debug  object_script.step06.Release  step06.cc
examples/C++/MyProjects/Doodle/step07/: CMakeLists.txt  Doodle.cc  Doodle.h  DrawWindow.cc  DrawWindow.h  Line.cc  Line.h  object_script.step07.Debug  object_script.step07.Release  rc_resources.py  resources.qrc  resources_rc.py  step07.cc  step07.pro  step07.pro.user.ae887b7
examples/C++/MyProjects/Doodle/step08/: CMakeLists.txt  Doodle.cc  Doodle.h  DrawWindow.cc  DrawWindow.h  Line.cc  Line.h  MainWindow.cc  MainWindow.h  hello2.qscb  hello_qt5.qscb  hello_qt6.qscb  hi.qscb  object_script.step08.Debug  object_script.step08.Release  rc_resources.py  resources.qrc  resources_rc.py  step08.cc  step08.pro.user.ae887b7
examples/C++/MyProjects/Doodle/step09/: CMakeLists.txt  Doodle.cc  Doodle.h  DrawWindow.cc  DrawWindow.h  Line.cc  (+4 more)
examples/C++/MyProjects/GettingStartedWithQt5/: .clangd  CMakeLists.txt  compile_commands.json
examples/C++/MyProjects/Notepad/: CMakeLists.txt
examples/Python/: pyproject.toml
examples/Python/MyProjects/: RadioGaga.py  TextFinder.py  TextFinderForm.py  currency.py  frames.py  fruitList.py  interestCalc.py  labels.py  listWidget.py  main.py  markdown.py  penProperties.py  pg_example.py  pyproject.toml  sigslots.py  sigslots2.py  tabdemo.py  tabwidget.py  treeWidget.py  weather.py  widget.py
examples/Python/MyProjects/BeginningPyQt6/: dpi.py
examples/Python/MyProjects/Brain/: hello.py  readme.md  slider.py
examples/Python/MyProjects/Charting/: Interpreting Financial Ratios.docx  PIDILITIND.NS_financial_report.md  analyze_company.py  analyze_company_for_investment.ipynb  analyze_company_pyqt6.py  analyze_nifty50_stocks.py  download_stocks_data.py  fin_charting.py  frozen_cols.py  geminiPlot.py  lineChart.py  pfolio.py  pfolio_17-Dec-2022.csv  pfolio_21-Dec-2022.csv  pfolio_perf.py  plotDemo.py  scratch.ipynb  streamlit_fin_plot.py
examples/Python/MyProjects/ChatGPT/: hf1.py  test.py  transformers.ipynb
examples/Python/MyProjects/CompVision/: displayImage.py  displayVideo.py  humanDetection.py  imageProcessing.py  textEditor_rc.py
examples/Python/MyProjects/DataViz/: dataviz.py
examples/Python/MyProjects/Database/: createDatabase.py  psqlManager.py  sqlManager.py  toolbarIcons_rc.py  viewDatabase.py
examples/Python/MyProjects/ImageChanger/: imageChanger.py  mainWindow.py  rc_resources.py  resources_rc.py  ui_newimagedlg.py
examples/Python/MyProjects/PyDoodle/: readme.md
examples/Python/MyProjects/PySideDoodle/: layouts.py  pyside_doodle.py
examples/Python/MyProjects/Pyside6/: basic.py  basic1.py  basic2.py  helloPyside6.py  mainWin.py  stdIcons.py
examples/Python/MyProjects/Python4Finance/: portfolio_analysis.ipynb
examples/Python/MyProjects/PythonGUI/: firstApp.py  sigSlot.py
examples/Python/MyProjects/QtAwesomeProgs/: basic.py  hello.py  std_icons.py
examples/Python/MyProjects/Socratia/: rex1.py  scratch.py
examples/Python/MyProjects/StockInvesting/: nse_buffett_screen.py
examples/Python/MyProjects/Summerfield/: hexSpinBox.py  splitters.py
examples/Python/MyProjects/TextEditor/: TextEditor.py
examples/Python/MyProjects/Trials/: frozenColumns.py
examples/Python/MyProjects/logAnalysis/: jsonl_to_csv.py
examples/Python/PyQtExamples/animations/: moveblocks.py
examples/Python/PyQtExamples/charts/: areaChart.py  barChart.py  memoryusage.py  pyChart.py  stackedBarChart.py
examples/Python/PyQtExamples/dialogs/: findDialog.py  findFiles.py  standarddialogs.py  tabdialog.py  trivialwizard.py
examples/Python/PyQtExamples/effects/: lighting.py
examples/Python/PyQtExamples/graphicsview/: anchorLayout.py  collidingMice.py  elasticNodes.py  mice_rc.py  padNavigator.py  padnavigator_rc.py  rc_mice.py  rc_padnavigator.py
examples/Python/PyQtExamples/itemviews/: basicsortfiltermodel.py  coloreditorfactory.py  customsortfiltermodel.py  dirview.py  fetchmore.py  planes.xml  simpledommodel.py  simplewidgetmapper.py  spinboxdelegate.py  stardelegate.py  storageview.py
examples/Python/PyQtExamples/layouts/: basicLayouts.py  borderLayout.py  flowLayout.py
examples/Python/PyQtExamples/mainwindows/: docWidgets.py  mainWindowApp.py  mdiTextEditor.py  menus.py  recentFiles.py  separations.py  textEditor.py
examples/Python/PyQtExamples/painting/: concentricCircles.py  painterPaths.py  transformations.py
examples/Python/PyQtExamples/richtext/: calendar.py  orderform.py  syntaxhighlighter.py
examples/Python/PyQtExamples/tools/: regexp.py
examples/Python/PyQtExamples/widgets/: analogClock.py  calculator.py  calendarWidget.py  characterMap.py  digitalClock.py  groupBox.py  helloPyQt.py  imageViewer.py  lineEdits.py  movie.py  scribble.py  shapedClock.py  sliders.py  spinBoxes.py  styles.py  tetrix.py  toolTips.py  widgetGallery.py  wiggly.py  windowFlags.py
(+1078 files in other folders)
