[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autopep8>=2.3.2",
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "bokeh>=3.8.1",
    "cloudpickle>=3.1.2",
    "corenlp>=0.0.14",
    "cufflinks>=0.17.3",
    "darkdetect>=0.8.0",
    "datasets>=4.4.1",
    "finplot>=1.9.7",
    "huggingface-hub>=0.36.0",
    "imblearn>=0.0",
    "kaggle>=1.8.2",
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "openai>=2.12.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polyglot>=16.7.4",
    "psycopg2>=2.9.11",
    "pyflakes>=3.4.0",
    "pynlp>=0.4.2",
    "pyqt6>=6.10.1",
    "pyqt6-charts>=6.10.0",
    "pyqt6-qscintilla>=2.14.1",
    "pyqtdarktheme>=1.2.1",
    "qdarkstyle>=3.2.3",
    "qtawesome>=1.4.0",
    "qtconsole>=5.7.0",
    "qtpy>=2.4.3",
    "quandl>=3.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.1",
    "sympy>=1.14.0",
    "textblob>=0.19.0",
    "transformers>=4.57.3",
    "xgboost>=3.1.2",
    "yfinance>=0.2.66",
]
