[project]
name = "myprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyqt6>=6.10.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "scikit-learn>=1.7.2",
    "yfinance>=0.2.66",
]
